# gridify

./: .gitignore  Anchor.toml  README.md  bun.lockb  makefile  package.json  requirements.txt  tsconfig.json
app/: .gitignore  bun.lockb  index.html  package.json  vite.config.ts
app/src/: App.tsx  index.tsx
app/src/components/: Navbar.module.css  Navbar.tsx
app/src/pages/: AvailableData.module.css  AvailableData.tsx  CreateGrid.module.css  CreateGrid.tsx  GridMonitor.module.css  GridMonitor.tsx  Home.module.css  Home.tsx  NavBar.module.css  NavBar.tsx  NearbyProviders.module.css  NearbyProviders.tsx  Profile.module.css  Profile.tsx  ProviderInfo.module.css  ProviderInfo.tsx  RegisterDevice.module.css  RegisterDevice.tsx  SelectGrid.module.css  SelectGrid.tsx  WalletConnect.tsx  admin.tsx
app/src/pages/utils/: idl.json  shdw_utils.tsx  utils.tsx
app/wifi_ble_scanner/: 8at54652Di1Lbk39W9a3C6L3UNihBzw9AaLHEe7qJwEy.json  9tK7MQYpaN9oB2uqS9Fraf5HbpMJAxsGVftfZRCDj52K.json  FewsmCRKURJdJvp2Pxy7RwmmPya8bJbGU5xhxefmr1vA.json  FpsyY5zKNnDtiiTsLWH4wJ948q2suDVFGhsSybNXUuTb.json  H2aGjx9HHDWBUAaB4azbKXbCBFA8FnhgK3PBf5ezyEFB.json  ipfs.py  scanner.py  solana_utils.py
esp32/wifi_ble_mode/: wifi_ble_mode.ino
programs/gridify/: Cargo.toml
programs/gridify/src/: lib.rs
programs/gridify/src/grid/: grid.rs  mod.rs
programs/gridify/src/token/: token.rs
tests/: gridify.ts
